# relay

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  install-node.sh  install-runner.sh  install.sh  uninstall.sh
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
crates/common/: Cargo.toml
crates/common/src/: lib.rs  logging.rs  types.rs
crates/master/: Cargo.toml  build.rs
crates/master/migrations/: 0001_init.sql  0002_rename_tunnel_limit.sql  0003_backup_jobs.sql
crates/master/src/: auth.rs  backup.rs  cache.rs  config.rs  db.rs  enroll.rs  grpc.rs  http.rs  main.rs  maintenance.rs  models.rs  pause.rs  pki.rs  ports.rs  registry.rs  scheduler.rs  series.rs  snowflake.rs  state.rs  upgrade.rs
crates/node/: Cargo.toml
crates/node/src/: acl.rs  enroll.rs  forward.rs  main.rs  upgrade.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: relay.proto
crates/proto/src/: lib.rs
deploy/: docker-compose.postgres.yml  docker-compose.redis.yml
deploy/systemd/: relay-master.env.example  relay-master.service  relay-node-updater  relay-node-updater.path  relay-node-updater.service  relay-node.env.example  relay-node.service
docs/: deployment.md  development.md  user-guide.md
web/: build.ts  package-lock.json  package.json  server.ts  tsconfig.json
web/src/: App.tsx  index.css  index.html
web/src/components/: AnnouncementPopup.tsx  AreaSwitcher.tsx  BootSplash.tsx  Layout.tsx  ProtectedRoute.tsx  RequireAdmin.tsx  RoleHome.tsx  Sparkline.tsx  UpgradeNodeDialog.tsx
web/src/components/ui/: badge.tsx  button.tsx  calendar.tsx  card.tsx  dialog.tsx  empty-state.tsx  input.tsx  popover.tsx  protocol-badge.tsx  protocol-set-badge.tsx  scroll-area.tsx  select.tsx  switch.tsx  table.tsx
web/src/hooks/: useConfirm.tsx
web/src/lib/: api.ts  auth.ts  theme.ts  utils.ts
web/src/pages/: Config.tsx  Dashboard.tsx  Forwards.tsx  Login.tsx  Me.tsx  NodeDetail.tsx  Nodes.tsx  Status.tsx  Tunnels.tsx  UserDashboard.tsx  UserGroups.tsx  Users.tsx
