[workspace]
resolver = "2"
members = [
    "crates/proto",
    "crates/common",
    "crates/master",
    "crates/node",
]

[workspace.package]
version = "0.0.3"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["relay contributors"]
repository = "https://github.com/0xUnixIO/relay"

[workspace.dependencies]
# async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# gRPC
tonic = { version = "0.12", features = ["tls", "transport"] }
tonic-build = "0.12"
protoc-bin-vendored = "3"
prost = "0.13"
prost-types = "0.13"

# web (master HTTP API)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# data
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# serde / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
config = "0.14"

# logs / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"

# auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# misc
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
bytes = "1"
hex = "0.4"
futures-core = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

# internal
relay-proto = { path = "crates/proto" }
relay-common = { path = "crates/common" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
