[package]
name = "relay-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "relay-node"
path = "src/main.rs"

[dependencies]
relay-proto.workspace = true
relay-common.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true

tonic.workspace = true
prost.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

clap.workspace = true
dotenvy.workspace = true
bytes.workspace = true
ipnet = "2.10"
rcgen = "0.13"
base64 = "0.22.1"
x509-parser = "0.16"
time = "0.3"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
socket2 = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "zerocopy"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"
